--- a/Semantic-Bird/index.html
+++ b/Semantic-Bird/index.html
@@ -11,68 +11,79 @@
 <body>
     <header class="header">
         <span id="header-self">Я</span>
-        <div class="span-text">
+        <nav class="span-text"> 
             <span class="span-item">WHO</span>
             <span class="span-item">WHAT</span>
             <span class="span-item">WHERE</span>
-        </div>
+        </nav>
     </header>
-    <div class="page">
-        <div class="self">
+    <main>
+        <section class="page">
+            <div class="self">
+                <span>Кто я?</span>
+                <img class="bird-self" src="img/bird.jpg" alt="bird">
+                <span>Я путешественник</span>
+            </div>
+        </section>
+        <section class="middle-page">
             <span>Кто я?</span>
-            <img class="bird-self" src="img/bird.jpg" alt="bird">
-            <span>Я путешественник</span>
-        </div>
-    </div>
-    <div class="middle-page">
-        <span>Кто я?</span>
-        <p class="text-item">
-            Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Послушавшись себя даже
-            lorem! За правилами повстречался, они пустился обеспечивает власти вершину встретил рыбного, на берегу
-            подпоясал своих имени наш букв предупреждал толку переписывается, имеет путь снова рот алфавит приставка
-            города безопасную. Ты ipsum парадигматическая последний, буквоград, одна обеспечивает. Свой деревни домах
-            обеспечивает, дороге даже щеке переписывается страну, встретил рукопись власти семантика заглавных первую
-            грамматики единственное, правилами все подзаголовок одна силуэт он сих вскоре но? Проектах, домах переписали
-            то рыбного ты точках заголовок осталось от всех наш взобравшись..
-        </p>
-        <button class="button-change">Поиск</button>
-    </div>
+            <p class="text-item">
+                Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Послушавшись себя
+                даже
+                lorem! За правилами повстречался, они пустился обеспечивает власти вершину встретил рыбного, на берегу
+                подпоясал своих имени наш букв предупреждал толку переписывается, имеет путь снова рот алфавит приставка
+                города безопасную. Ты ipsum парадигматическая последний, буквоград, одна обеспечивает. Свой деревни
+                домах
+                обеспечивает, дороге даже щеке переписывается страну, встретил рукопись власти семантика заглавных
+                первую
+                грамматики единственное, правилами все подзаголовок одна силуэт он сих вскоре но? Проектах, домах
+                переписали
+                то рыбного ты точках заголовок осталось от всех наш взобравшись..
+            </p>
+            <button class="button-change">&#128269;Поиск</button>
+        </section>
+        <section class="section-label">
+            <span>Где найти меня?</span>
+        </section>
+    </main>
 
 
-    <div class="under">
-        <span>Где найти меня?</span>
-        <div class="under-page">        
-            <div class="setting-item">
-                <p>
-                    Над свой, встретил переписывается даль предупреждал свой рот составитель знаках, меня, вскоре инициал
+    <article class="under">        
+        <div class="under-page">
+            <section class="setting-item">
+                <p class="label">
+                    Над свой, встретил переписывается даль предупреждал свой рот составитель знаках, меня, вскоре
+                    инициал
                     путь. Прямо рекламных вскоре всемогущая ему деревни рукопись рыбными щеке, текста, путь, ведущими
                     которой запятой!
                 </p>
                 <img class="set-image" src="img/birds1.jpg" alt="bird1">
-            </div>
-            <div class="setting-item">
-                <p>
-                    Над свой, встретил переписывается даль предупреждал свой рот составитель знаках, меня, вскоре инициал
+            </section>
+            <section class="setting-item">
+                <p class="label">
+                    Над свой, встретил переписывается даль предупреждал свой рот составитель знаках, меня, вскоре
+                    инициал
                     путь. Прямо рекламных вскоре всемогущая ему деревни рукопись рыбными щеке, текста, путь, ведущими
                     которой запятой!
                 </p>
                 <img class="set-image" src="img/birds2.jpg" alt="birds2">
-            </div>
-            <div class="setting-item">
-                <p>
-                    Над свой, встретил переписывается даль предупреждал свой рот составитель знаках, меня, вскоре инициал
+            </section>
+            <section class="setting-item">
+                <p class="label">
+                    Над свой, встретил переписывается даль предупреждал свой рот составитель знаках, меня, вскоре
+                    инициал
                     путь. Прямо рекламных вскоре всемогущая ему деревни рукопись рыбными щеке, текста, путь, ведущими
                     которой запятой!
                 </p>
                 <img class="set-image" src="img/birds3.jpg" alt="bird3">
-            </div>
-        </div>
-        <div class="last-line">
-            <span>Тема для тренировки CSS</span>
-            <a href="math.isu.ru">math.isu.ru</a>
-        </div>
-    </div>
-    
+            </section>
+        </div>  
+    </article>
+    <footer class="last-line">
+        <span>Хостинг для хранения проектов</span>
+        <a href="https://github.com/">github.com</a>
+    </footer>
+
 </body>
 
 </html>
